Fix bugs: сниппеты, метки. На очереди: уменьшение кол-ва ссылок в выдаче

--- a/placebo_crawler/search_engine/templates/index.html
+++ b/placebo_crawler/search_engine/templates/index.html
@@ -2,7 +2,7 @@
 
 {% macro get_url_for_page(page_num) -%}
     {% if query != "" %}
-        {{ url_for("index", p=page_num, q=query, fm=fm) }}
+        {{ url_for("index", p=page_num, q=query) }}
     {% else %}
         {% if page_num <= 1 %}
             {{ url_for("index") }}
