--- a/placebo_crawler/search_engine/templates/index.html
+++ b/placebo_crawler/search_engine/templates/index.html
@@ -22,6 +22,13 @@
         </div>
     </form>
 
+    {% if replace != '' %}
+        <div>
+            <ul>
+                <em>Возможно, вы имели в виду <b>{{replace}}</b>.</em>
+            </ul>
+        </div>
+    {% endif %}
     {% for answer in answers %}
         <div>
             <ul>
